Disable request cache for non-deterministic runtime fields
This change ensures that a non-deterministic script defined in the runtime mapping is not eligible
to the request cache.
It also moves the scripts that extract values from source to be considered deterministic.
Currently a source-only runtime field defined in a search request is not eligible to the request cache.
This commit fixes this discrepancy.